test/fixtures/errors/unhandled_promise_trace_warnings.js
// Flags: --trace-warnings --unhandled-rejections=warn
'use strict';
require('../../common');
const p = Promise.reject(new Error('This was rejected'));
setImmediate(() => p.catch(() => {}));
